--- a/style.css
+++ b/style.css
@@ -15,13 +15,20 @@ html, body {
     align-content: center;
 }
 
+#logo{
+    display: block; 
+    margin-left: auto; 
+    margin-right: auto; 
+    width: 50%;
+}
+
 #header-banner {
 order: 0;
-height: 80px;
+height: 60px;
 font-weight: bold;
 font-size: 18px;
-color: #ffffff;
-background: #0010c0;
+color: #000000;
+background: #ffffff;
 text-align: center;
 }
 
