--- a/style.css
+++ b/style.css
@@ -71,8 +71,7 @@ text-align: center;
 }
 
 #scan-result {
-    order: 3;
-    height: 500px; 
+    order: 3; 
     margin: 15px;
     display: flex;
     flex-direction: column;
@@ -80,16 +79,20 @@ text-align: center;
 
 #qr-text-label{
     order: 0; 
+    margin-top: 100px;
 }
 #qr-text{
     order: 1;
+    margin-top: 100px; 
 }
 #qr-link{
-    order: 2
+    order: 2;
+    margin-top: 100px;
 }
 
 #scan-button{
-    margin: 20px;
+    margin: 15px;
+    margin-top: 100px;
     padding: 5px;
     width: 250px;
     order: 3;
