--- a/style.css
+++ b/style.css
@@ -79,20 +79,18 @@ text-align: center;
 
 #qr-text-label{
     order: 0; 
-    margin-top: 100px;
+    margin-top: 200px;
 }
 #qr-text{
     order: 1;
-    margin-top: 100px; 
+    margin-bottom: 200px; 
 }
 #qr-link{
     order: 2;
-    margin-top: 100px;
+    margin-bottom: 200px;
 }
 
 #scan-button{
-    margin: 15px;
-    margin-top: 100px;
     padding: 5px;
     width: 250px;
     order: 3;
