--- a/style.css
+++ b/style.css
@@ -72,24 +72,24 @@ text-align: center;
 
 #scan-result {
     order: 3; 
-    margin: 15px;
+    margin-top: 200px;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 #qr-text-label{
     order: 0; 
-    margin-top: 200px;
 }
 #qr-text{
     order: 1; 
 }
 #qr-link{
-    order: 2;
+    order: 1;
 }
 
 #scan-button{
-    order: 3;
+    order: 2;
     margin-top: 200px; 
     padding: 5px;
     width: 250px;
