changed the justificaiton of objects in the scan result and changed the height of the scan result

--- a/style.css
+++ b/style.css
@@ -71,11 +71,12 @@ text-align: center;
 }
 
 #scan-result {
+    height: 500px;
     order: 3; 
-    margin-top: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-around;
 }
 
 #qr-text-label{
