--- a/style.css
+++ b/style.css
@@ -76,21 +76,24 @@ text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
 }
 
 #qr-text-label{
     order: 0; 
+    margin: 50px;
 }
 #qr-text{
     order: 1; 
+    margin: 50px;
 }
 #qr-link{
     order: 2;
+    margin: 50px; 
 }
 
 #scan-button{
     order: 3;
+    margin: 50px;
     padding: 5px;
     width: 250px;
 }
