--- a/style.css
+++ b/style.css
@@ -80,20 +80,23 @@ text-align: center;
 
 #qr-text-label{
     order: 0; 
-    margin: 50px;
+    margin: 20px;
+    font-size: 18px;
 }
 #qr-text{
     order: 1; 
-    margin: 50px;
+    margin: 20px;
+    font-size: 18px;
 }
 #qr-link{
     order: 2;
-    margin: 50px; 
+    margin: 20px; 
+    font-size: 18px;
 }
 
 #scan-button{
     order: 3;
-    margin: 50px;
+    margin: 20px;
     padding: 5px;
     width: 250px;
 }
