--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ text-align: center;
 #scan-result {
     height: 500px;
     order: 3; 
+    margin: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
