--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ text-align: center;
     width: 380px; 
     height: 500px;
     background-color: rgb(177, 177, 177);
-    visibility: hidden;
+    display: none;
 }
 
 #scan-result {
