--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ text-align: center;
     margin: 30px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: center;
 }
 
 #qr-text-label{
